elasticsearch-sts.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - port: 9300
      name: nodes
    - port: 9200
      name: client
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
          ports:
            - containerPort: 9200
              name: client
            - containerPort: 9300
              name: nodes
          volumeMounts:
            - name: es-pvc
              mountPath: "/Volumes"
          volumes:
            - name: es-pvc
              persistentVolumeClaim:
                claimName: es-pvc
