ingresses.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /1
            backend:
              serviceName: kibana
              servicePort: 5601
          - path: /
            backend:
              serviceName: web-server
              servicePort: 8085
